[package]
name = "sys-monitor"
version = "0.1.0"
authors = ["VanillaBrooks <brookskarlik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version="0.3.8", features=["processthreadsapi","tlhelp32","impl-default","impl-debug", "handleapi"]}
aho-corasick = "0.7.6"
reqwest = "0.9.22"
